# TrayVault

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICES.md  README.md  ai-context.md  build.rs  roadmap.md
.github/workflows/: ci.yml  release.yml
assets/: Roboto-LICENSE.txt  trayvault.rc
docs/: current-handover-prompt.md  index.md  trayvault-prd.md  update-handover-prompt.md
docs/technical/: app-lifecycle.md  app-orchestration.md  async-thumbnail-loading.md  autostart-startup.md  blob-reference-counting.md  clipboard-capture.md  clipboard-hardening.md  compressed-blob-storage-assessment.md  compressed-blob-storage.md  config.md  crate-extraction-assessment.md  error-handling.md  global-hotkey.md  hashing-dedup.md  history-list-performance.md  logging.md  message-loop-callbacks.md  pixmap-rasterizer.md  release-pipeline.md  render-performance.md  rendering.md  settings-panel.md  storage.md  system-tray.md  text-card-layout.md  thumbnail-cache.md  ui-perf-caches.md  ui-views.md  win32-ffi.md  window-gdi.md
installer/: license.rtf  trayvault.wxs
src/: app.rs  config.rs  error.rs  hash.rs  log.rs  main.rs  models.rs
src/store/: blobs.rs  meta.rs  mod.rs
src/ui/: history.rs  input.rs  mod.rs  pixmap.rs  preview.rs  render.rs  scroll_bar.rs  search.rs  search_edit.rs  settings.rs  settings_input.rs  text.rs  theme.rs  thumb_cache.rs  thumb_loader.rs  titlebar.rs  widgets.rs
src/win32/: autostart.rs  clipboard.rs  ffi.rs  gdi.rs  glyph_raster.rs  hotkey.rs  mod.rs  shell.rs  tray.rs  wic.rs  window.rs
